--- a/src/supermarket/package.json
+++ b/src/supermarket/package.json
@@ -11,6 +11,6 @@
     "karma-spec-reporter": "^0.0.33",
     "mocha": "^9.2.2",
     "phantomjs-prebuilt": "^2.1.16",
-    "sprockets-chain": "0.0.9"
+    "sprockets-chain": "^0.0.16"
   }
 }
