--- a/src/supermarket/package.json
+++ b/src/supermarket/package.json
@@ -12,5 +12,8 @@
     "mocha": "^9.2.2",
     "phantomjs-prebuilt": "^2.1.16",
     "sprockets-chain": "^0.0.16"
+  },
+  "dependencies": {
+    "hike": "^1.0.1"
   }
 }
