--- a/src/supermarket/package.json
+++ b/src/supermarket/package.json
@@ -10,10 +10,6 @@
     "karma-requirejs": "^1.1.0",
     "karma-spec-reporter": "^0.0.33",
     "mocha": "^9.2.2",
-    "phantomjs-prebuilt": "^2.1.16",
-    "sprockets-chain": "^0.0.16"
-  },
-  "dependencies": {
-    "hike": "^1.0.1"
+    "phantomjs-prebuilt": "^2.1.16"
   }
 }
